--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-e git+https://github.com/sbahar619/django.git@add-support-for-fips-policy#egg=django
 django>=1.11,<1.12
 django-debug-toolbar==1.11.1
 gunicorn==19.5.0
